src/other/mico-2.3.12/test/idl/error/expected-stderr-case17.idl
case17.idl:7: constant definition 'ANY' not of proper type
